[gd_scene load_steps=4 format=3 uid="uid://d3nd7kiqrswxx"]

[ext_resource type="PackedScene" uid="uid://dd0q8xxbij8at" path="res://Resource Scenes/3d_map.tscn" id="1_e87u4"]
[ext_resource type="Script" uid="uid://cx7e27w5n85ap" path="res://Assets/Scripts/map_display.gd" id="1_j2rn6"]

[sub_resource type="World3D" id="World3D_e87u4"]

[node name="Map Display" type="Node2D"]
script = ExtResource("1_j2rn6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -201.0
offset_top = -201.0
offset_right = 200.0
offset_bottom = 65.0
color = Color(0.585062, 0.585062, 0.5850621, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Control"]
layout_mode = 0
offset_left = -183.0
offset_top = -187.0
offset_right = 181.0
offset_bottom = -9.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Control/SubViewportContainer"]
world_3d = SubResource("World3D_e87u4")
transparent_bg = true
handle_input_locally = false
size = Vector2i(364, 178)
render_target_update_mode = 4

[node name="3dMap" parent="Control/SubViewportContainer/SubViewport" instance=ExtResource("1_e87u4")]

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = -183.0
offset_top = -1.0
offset_right = 184.0
offset_bottom = 51.0
text = "Submit"

[node name="Floor0" type="Button" parent="Control"]
layout_mode = 0
offset_left = 159.0
offset_top = -60.0
offset_right = 191.0
offset_bottom = -29.0
text = "0"

[node name="Floor1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 159.0
offset_top = -96.0
offset_right = 191.0
offset_bottom = -65.0
text = "1"

[node name="Floor2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = -133.0
offset_right = 192.0
offset_bottom = -102.0
text = "2"

[node name="Floor3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = -170.0
offset_right = 192.0
offset_bottom = -139.0
text = "3"

[connection signal="button_down" from="Control/Button" to="." method="_on_button_down"]
[connection signal="button_down" from="Control/Floor0" to="." method="_on_floor_0_button_down"]
[connection signal="button_down" from="Control/Floor1" to="." method="_on_floor_1_button_down"]
[connection signal="button_down" from="Control/Floor2" to="." method="_on_floor_2_button_down"]
[connection signal="button_down" from="Control/Floor3" to="." method="_on_floor_3_button_down"]
